# blog

./: Cargo.toml  Dockerfile  build_docker  db_login  deploy  run_docker  test_watch
.cargo/: cargo.toml  config.toml
assets/: post.css
db/scripts/: bootstrap.sql
posts/: 20241106_image_resizing.md  20241113_convolution.md  20241125_fourier_transforms.md  20241227_aoc_24.md
src/: error.rs  filters.rs  lib.rs  main.rs  post.rs  recipe.rs
src/config/: mod.rs
src/web/: mod.rs  routes_login.rs
templates/: base.html  index.html  posts.html  recipes.html
tests/: quick_dev.rs
tests/common/: mod.rs
