[package]
name = "blog"
version = "0.1.0"
edition = "2021"
default-run = "blog"

[[bin]]
name = "blog"
path = "src/main.rs"

[[bin]]
name = "ingest"
path = "bin/ingest.rs"

[[bin]]
name = "bootstrap"
path = "bin/bootstrap.rs"

[dependencies]
sea-query = "0"
askama = { version = "0.12.1", features = ["markdown"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.1"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "time"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.218"
serde_json = "1.0.139"

[dev-dependencies]
anyhow = "1.0.96"
httpc-test = "0.1.10"
